--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="menu-container">
                 <div class="grt-menu-row">
                     <div class="grt-menu-logo">
-                        <a href="#" class="grt-logo"><img src="assets/images/logo/I-Direct.png" class="mainlogo"
+                        <a href="index.html" class="grt-logo"><img src="assets/images/logo/I-Direct.png" class="mainlogo"
                                 alt="I-Direct Logo"></a>
                         <!---->
                         <a href="#" class="grt-logo publisherPartner">
@@ -117,11 +117,11 @@
                                         </a>
                                     </div>
                                 </li>
-                                <li class="active"><a href="#about">about us</a></li>
-                                <li><a href="#publishedCategoryTabs">Conditions</a></li>
-                                <li><a href="#publishedCategoryTabs">Oral Discussion</a></li>
-                                <li><a href="#publishedCategoryTabs">Submissions</a></li>
-                                <li><a href>Fess</a></li>
+                                <li class="active"><a href="editProfile.html">edit profile</a></li>
+                                <li><a href="payment.html">payment</a></li>
+                                <li><a href="result.html">result</a></li>
+                                <li><a href="Status.html">status</a></li>
+                                <li><a href="revision.html">Fess</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -148,7 +148,7 @@
                                     data-bs-target="#registerModal">Register</a>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12">
-                                <a class="d-block w-100 btn btn-secondary" href="#">Submit</a>
+                                <a class="d-block w-100 btn btn-secondary" href="paper.html">Submit</a>
                             </div>
                         </div>
                     </div>
