--- a/payment.html
+++ b/payment.html
@@ -70,12 +70,12 @@
     <!-- ============================================================== -->
     <!-- Header - style you can find in style.css -->
     <!-- ============================================================== -->
-    <header data-lenis-prevent>
+   <header data-lenis-prevent>
         <div class="container">
             <div class="menu-container">
                 <div class="grt-menu-row">
                     <div class="grt-menu-logo">
-                        <a href="#" class="grt-logo"><img src="assets/images/logo/I-Direct.png" class="mainlogo"
+                        <a href="index.html" class="grt-logo"><img src="assets/images/logo/I-Direct.png" class="mainlogo"
                                 alt="I-Direct Logo"></a>
                         <!---->
                         <a href="#" class="grt-logo publisherPartner">
@@ -98,16 +98,6 @@
                                     class="line2"></span><span class="line3"></span></button>
 
                             <ul class="grt-menu">
-                                <li class="mobileUserInfo">
-                                    <div class="imgUsername">
-                                        <p>
-                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M12.16 10.8702C12.06 10.8602 11.94 10.8602 11.83 10.8702C10.6822 10.8313 9.59461 10.3471 8.7976 9.52019C8.00059 8.69332 7.55671 7.58869 7.55997 6.44023C7.55997 3.99023 9.53997 2.00023 12 2.00023C12.5824 1.98973 13.1612 2.09404 13.7033 2.30721C14.2454 2.52039 14.7402 2.83825 15.1594 3.24265C15.5787 3.64705 15.9142 4.13006 16.1468 4.66412C16.3793 5.19818 16.5045 5.77282 16.515 6.35523C16.5255 6.93765 16.4212 7.51642 16.208 8.05852C15.9948 8.60062 15.677 9.09543 15.2726 9.51468C14.8682 9.93394 14.3851 10.2694 13.8511 10.502C13.317 10.7346 12.7424 10.8597 12.16 10.8702ZM7.15997 14.5602C4.73997 16.1802 4.73997 18.8202 7.15997 20.4302C9.90997 22.2702 14.42 22.2702 17.17 20.4302C19.59 18.8102 19.59 16.1702 17.17 14.5602C14.43 12.7302 9.91997 12.7302 7.15997 14.5602Z" stroke="#8C9AAB" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
-                                            ramy ierek 2014!
-                                         </p>
-                                    </div>
-                                </li>
                                 <li>
                                     <div class="logoMobile">
                                         <a href="#" class="grt-logo publisherPartner">
@@ -127,50 +117,11 @@
                                         </a>
                                     </div>
                                 </li>
-                                <li class="active"><a href="#about">about us</a></li>
-                                <li><a href="#publishedCategoryTabs">Conditions</a></li>
-                                <li><a href="#publishedCategoryTabs">Oral Discussion</a></li>
-                                <li><a href="#publishedCategoryTabs">Submissions</a></li>
-                                <li><a href>Fess</a></li>
-                                <li>
-                                    <div class="dropdown">
-                                        <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-bs-haspopup="true" aria-bs-expanded="false">
-                                         <p>
-                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M12.16 10.8702C12.06 10.8602 11.94 10.8602 11.83 10.8702C10.6822 10.8313 9.59461 10.3471 8.7976 9.52019C8.00059 8.69332 7.55671 7.58869 7.55997 6.44023C7.55997 3.99023 9.53997 2.00023 12 2.00023C12.5824 1.98973 13.1612 2.09404 13.7033 2.30721C14.2454 2.52039 14.7402 2.83825 15.1594 3.24265C15.5787 3.64705 15.9142 4.13006 16.1468 4.66412C16.3793 5.19818 16.5045 5.77282 16.515 6.35523C16.5255 6.93765 16.4212 7.51642 16.208 8.05852C15.9948 8.60062 15.677 9.09543 15.2726 9.51468C14.8682 9.93394 14.3851 10.2694 13.8511 10.502C13.317 10.7346 12.7424 10.8597 12.16 10.8702ZM7.15997 14.5602C4.73997 16.1802 4.73997 18.8202 7.15997 20.4302C9.90997 22.2702 14.42 22.2702 17.17 20.4302C19.59 18.8102 19.59 16.1702 17.17 14.5602C14.43 12.7302 9.91997 12.7302 7.15997 14.5602Z" stroke="#8C9AAB" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
-                                            ramy ierek 2014!
-                                         </p>
-                                        </button>
-                                        <div class="dropdown-menu" aria-bs-labelledby="dropdownMenuButton">
-                                        <span class="d-block text-center userNameSpan">ramy ierek 2014!</span>
-                                          <a class="dropdown-item" href="#">
-                                            Profile
-                                          </a>
-                                          <a class="dropdown-item" href="#">
-                                            My Researcher
-                                          </a>
-                                          <a class="dropdown-item" href="#">Admin</a>
-                                          <a class="dropdown-item" href="#">Logout</a>
-                                        </div>
-                                      </div>
-                                </li>
-                                <li class="mobileUserInfo">
-                                    <a  href="#">
-                                        Profile
-                                      </a>
-                                </li>
-                                <li class="mobileUserInfo">
-                                    <a  href="#">
-                                        My Researcher
-                                    </a>
-                                </li>
-                                <li class="mobileUserInfo">
-                                    <a  href="#">Admin</a>
-                                </li>
-                                <li class="mobileUserInfo">
-                                    <a  href="#">Logout</a>
-                                </li>
+                                <li class="active"><a href="editProfile.html">edit profile</a></li>
+                                <li><a href="payment.html">payment</a></li>
+                                <li><a href="result.html">result</a></li>
+                                <li><a href="Status.html">status</a></li>
+                                <li><a href="revision.html">Fess</a></li>
                             </ul>
                         </nav>
                     </div>
