--- a/paper.html
+++ b/paper.html
@@ -70,12 +70,12 @@
     <!-- ============================================================== -->
     <!-- Header - style you can find in style.css -->
     <!-- ============================================================== -->
-    <header data-lenis-prevent>
+   <header data-lenis-prevent>
         <div class="container">
             <div class="menu-container">
                 <div class="grt-menu-row">
                     <div class="grt-menu-logo">
-                        <a href="#" class="grt-logo"><img src="assets/images/logo/I-Direct.png" class="mainlogo"
+                        <a href="index.html" class="grt-logo"><img src="assets/images/logo/I-Direct.png" class="mainlogo"
                                 alt="I-Direct Logo"></a>
                         <!---->
                         <a href="#" class="grt-logo publisherPartner">
@@ -117,11 +117,11 @@
                                         </a>
                                     </div>
                                 </li>
-                                <li class="active"><a href="#about">about us</a></li>
-                                <li><a href="#publishedCategoryTabs">Conditions</a></li>
-                                <li><a href="#publishedCategoryTabs">Oral Discussion</a></li>
-                                <li><a href="#publishedCategoryTabs">Submissions</a></li>
-                                <li><a href>Fess</a></li>
+                                <li class="active"><a href="editProfile.html">edit profile</a></li>
+                                <li><a href="payment.html">payment</a></li>
+                                <li><a href="result.html">result</a></li>
+                                <li><a href="Status.html">status</a></li>
+                                <li><a href="revision.html">Fess</a></li>
                             </ul>
                         </nav>
                     </div>
